WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270993
Assertion failure in pas_enumerator_create due to wrong alignment
https://bugs.webkit.org/show_bug.cgi?id=270993
Summary
Assertion failure in pas_enumerator_create due to wrong alignment
David Degazio
Reported
2024-03-14 11:43:45 PDT
rdar://124562475
We recently bumped the PAS_INTERNAL_MIN_ALIGNMENT from 8 to 16 bytes. Most of libPAS respects this constant and hasn't had any issues in our normal testing, but it looks like pas_enumerator_create runs into a novel assertion failure. Specifically, a pas_enumerator_region consists of a 24-byte prefix before a payload, and we expect the payload to be aligned to the internal minimum - which 24 bytes doesn't satisfy. We should explicitly specify this alignment requirement in the pas_enumerator_region type so we no longer run into this assertion failure.
Attachments
Add attachment
proposed patch, testcase, etc.
David Degazio
Comment 1
2024-03-14 11:47:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25894
EWS
Comment 2
2024-03-15 12:11:14 PDT
Committed
276187@main
(5aa139649dd7): <
https://commits.webkit.org/276187@main
> Reviewed commits have been landed. Closing PR #25894 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug