Cherry-pick 276187@main (5aa139649dd7). https://bugs.webkit.org/show_bug.cgi?id=270993

Fix assertion failure in pas_enumerator_create due to wrong alignment
    https://bugs.webkit.org/show_bug.cgi?id=270993
    rdar://124562475

    Reviewed by Yusuke Suzuki.

    In pas_enumerator_create, we assert that the payload of a pas_enumerator_region
    is aligned to PAS_INTERNAL_MIN_ALIGN. This patch adds that alignment requirement
    to the type definition of pas_enumerator_region so we always respect this
    requirement.

    * Source/bmalloc/libpas/src/libpas/pas_enumerator_region.h:

    Canonical link: https://commits.webkit.org/276187@main

Canonical link: https://commits.webkit.org/274313.202@webkitglib/2.44